--- a/gas-station.html
+++ b/gas-station.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav  class="navbar navbar-expand-md bg-dark navbar-dark ">
-    <a style="margin-left: 2em;" class="navbar-brand" href="#">Alo Cứu Hộ 14</a>
+    <a style="margin-left: 2em;" class="navbar-brand" href="index.php">Alo Cứu Hộ 14</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,7 +28,7 @@
     <div class="row">
     <div class="col-sm-4">
     <li class="nav-item">
-    <a class="nav-link" href="index.html"><i  style="font-size: 1em; " class="fa fa-home"></i> Trang Chủ</a>
+    <a class="nav-link" href="index.php"><i  style="font-size: 1em; " class="fa fa-home"></i> Trang Chủ</a>
         </li>
           </div>
         
@@ -109,8 +109,8 @@
           zoom: 13
         },
         'hna': {
-          center: {lat:20.583521 , lng:105.922989 },
-          zoom: 13
+          center: {lat:20.466443 , lng:106.010190 },
+          zoom: 18
         },
         'hy': {
           center: {lat:20.8193369 , lng: 106.0314504},
