--- a/php-signup-login/signup.html
+++ b/php-signup-login/signup.html
@@ -52,7 +52,6 @@
             text-align: center;
             font-family: 'Dosis', sans-serif;
             display: block;
-            color: darkorange;;
         }
 
         p {
@@ -90,9 +89,9 @@
 <body>
     
     <header>
-        <a href="./../index.php">ALO CỨU HỘ 14</a>
+        <a href="./../index.html">ALO CỨU HỘ 14</a>
     </header>
-    <p>Hãy tạo một tài khoản để sử dụng toàn bộ các tính năng của chúng tôi.</p>
+    <p>Hãy tạo một tài khoản để sử dụng toàn bộ các tính năng.</p>
     <form action="process-signup.php" method="post" id="signup" novalidate>
         <div>
             <label for="name">Tên bạn</label>
